--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,6 @@
         <div class="logo">
           <h2>OpenAI Image Genrator</h2>
         </div>
-        <div class="nav-links">
-          <ul>
-            <li>
-              <a href="https://beta.openai.com/docs" target="_blank"
-                >OpenAI API Docs</a
-              >
-            </li>
-          </ul>
-        </div>
       </div>
     </header>
 
@@ -56,5 +47,13 @@
     </main>
 
     <div class="spinner"></div>
+    <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img
+        src="https://hitwebcounter.com/counter/counter.php?page=8113636&style=0036&nbdigits=5&type=page&initCount=0"
+        title="Free Counter"
+        alt="web counter"
+        border="0"
+    /></a>
   </body>
 </html>
